@@ -1,3 +1,5 @@
+* Force Element.extend() to skip XML nodes to avoid errors in IE, use the static Element methods instead. Closes #9709. [jddalton, yanick.rochon]
+
 * Fix IE issue with Element#replace() removing the childNodes of the returned element. Closes #11225. [Rukawa, jddalton]
 
 * Ensure Element#getStyle returns values in px unit, regardless of how they are set. [Andrew Dupont, jddalton]
